# metodos-computacionais

./: .gitignore  CMakeLists.txt  TokenRepository.cpp  TokenRepository.h  formula_parser.cpp  formula_parser.h  interpolation.cpp  interpolation.h  main.cpp  readme.md  termcolor.hpp  token_helper.cpp  token_helper.h  zero_of_function.cpp  zero_of_function.h
